@@ -1,6 +1,9 @@
 Revision history for Perl extension Net::SSH2.
 
 0.54
+        - on channel read method, when non-blocking mode is set, don't
+          call libssh2_channel_read repeatly until the buffer is
+          filled
         - add Net::SSH2 known_hosts method and Net::SSH2::KnownHosts
           class
         - add keepalive_config and keepalive_send methods
